# Parallel-Framework-for-Particle-Dynamics-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TEST_dense_mpi.S  TEST_gather_scatter.S  build.config  build.sh  cuda-seq.out  cuda-timming.out  cuda.out  generate.html  mpi-timing.mpi  mpi-timing.opemmp8  mpi-timming.centroid.subgrid  mpi-timming.cutoff  mpi-timming.out  run.pbs  run_mpi.pbs
data/: data1000.txt  data10000.txt
include/: base_particle.h  dense_scheduler.h  device.h  errs.h  kernel.h  kernels.h  particle.h  user_def.h  user_particle.h  utils.h  world.h
include/neo/: centroid_scheduler.h  cutoff_scheduler.h  dense_scheduler.h  particle.h
include/neo/user_def/: gravity_particle.h
include/user_def/: gravity_particle.h
pysrc/: generator.py
src/: CMakeLists.txt  base_particle.cpp  compute_acce.cu  dense_scheduler.cpp  device.cpp  kernel.cu  kernels.cu  main.cpp  particle.cpp  user_def.cpp  user_particle.cpp  utils.cpp  world.cpp
src/neo/: CMakeLists.txt  centroid_scheduler.cpp  cutoff_scheduler.cpp  dense_scheduler.cpp  particle.cpp  utils.cpp
src/neo/user_def/: gravity_particle.cpp
src/user_def/: gravity_particle.cpp
test/: CMakeLists.txt  test_centroid_mpi_neo.cpp  test_correctness.cpp  test_cuda.cu  test_cutoff_mpi_neo.cpp  test_dense_mpi.cpp  test_dense_mpi_neo.cpp  test_loads_store.cpp  test_padding_shrink.cpp  test_register_gravity.cpp  test_scatter_gather.cpp  test_seq.cpp  test_updates.cpp
