add_executable(TEST_load_store test_loads_store.cpp)
target_link_libraries(TEST_load_store pfpds)

add_executable(TEST_register_gravity test_register_gravity.cpp)
target_link_libraries(TEST_register_gravity pfpds)

add_executable(TEST_updates test_updates.cpp)
target_link_libraries(TEST_updates pfpds)

add_executable(TEST_padding_shrink test_padding_shrink.cpp)
target_link_libraries(TEST_padding_shrink pfpds)

add_executable(TEST_gather_scatter test_scatter_gather.cpp)
target_link_libraries(TEST_gather_scatter pfpds MPI::MPI_CXX)

add_executable(TEST_dense_mpi test_dense_mpi.cpp)
target_link_libraries(TEST_dense_mpi pfpds MPI::MPI_CXX)

add_executable(TEST_neo_dense_mpi test_dense_mpi_neo.cpp)
target_link_libraries(TEST_neo_dense_mpi neo_particles MPI::MPI_CXX)